<resources>
    <string name="app_name">ShopApp</string>
    <string name="name">Shop Name</string>
    <string name="email_id">Email Id</string>
    <string name="mobile">Mobile Number</string>
    <string name="address">Address</string>
    <string name="password">Password</string>
    <string name="con_password">Confirm Password</string>
    <string name="register">Didn\'t have Account! Register</string>
    <string name="text1">Already Registered Login me!</string>
    <string name="List">List Of Shops</string>
    <string name="status">Change Shop Status</string>
    <string name="closed">Closed</string>
    <string name="open">Open</string>
    <string name="change_state">Change State</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="log_in">Log In</string>
    <string name="search_hint">Search Shop</string>
    <string name="set_shop_location">Set Shop Location</string>
    <string name="title_activity_maps2">Map</string>
    <string name="search_location">Search Location</string>
    <string name="fragment_1_set">SET</string>
    <string name="shopkeeper">Shopkeeper</string>
    <string name="buyer">Buyer</string>
    <string name="todo">TODO</string>
    <string name="register_only">Register</string>
    <string name="back"><![CDATA[< < Back]]></string>
    <string name="next">Next</string>
    <string-array name="text">
        <item>You want to</item>
        <item>Sell Or Buy!!!</item>
    </string-array>

</resources>