<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:fitsSystemWindows="true"
    android:gravity="center"
    android:orientation="vertical">


    <ImageView
        android:layout_width="133dp"
        android:layout_height="128dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        android:src="@mipmap/ic_launcher_round" />

    <EditText
        android:id="@+id/email_login"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/email_id"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="@color/textColor"
        tools:ignore="RtlSymmetry"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

    <EditText
        android:id="@+id/password_login"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:focusableInTouchMode="true"
        android:hint="@string/password"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:imeActionId="@+id/login"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="@color/textColor"
        tools:ignore="InvalidImeActionId"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/login_button"
        style="?android:textAppearanceSmall"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="#fece2f"
        android:text="@string/log_in"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <Button
        android:id="@+id/reset_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/border"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/forgot_password"
        android:textAllCaps="false"
        android:textColor="@color/textColor" />

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:background="@drawable/border"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@color/textColor"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textSize="15sp" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />

</LinearLayout>

