<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/border2"
    tools:ignore="UseCompoundDrawables">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="50dp"
            android:id="@+id/list_view_image"
            android:layout_height="50dp"
            android:src="@mipmap/ic_logo"
            android:contentDescription="@string/todo"
            android:layout_margin="10dp"
            app:civ_border_width="2dp"
            app:civ_border_color="#FF000000"
            />
        <TextView
            android:id="@+id/shop_name"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:textColor="#000000" />
        <TextView
            android:id="@+id/shop_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAllCaps="true"
            android:textStyle="bold"

            android:layout_gravity="center"
            android:padding="10dp"
            />

        <ImageView
            android:id="@+id/details"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:src="@drawable/details"
            android:padding="5dp"
            android:contentDescription="@string/todo" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Profile_shown"
        android:orientation="horizontal"
        android:padding="10dp"
        android:baselineAligned="false">
        <LinearLayout
            android:layout_width="1dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email_id"

                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mobile"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/address"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="1dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"

            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/LV_email"
                android:maxLines="1"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/LV_mobile"
                android:maxLines="1"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/LV_address"
                android:maxLines="1"
                />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>