<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:ignore="ExtraText">
    <ImageView
        android:id="@+id/main_img"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:padding="20dp"
        android:src="@drawable/lo"
        android:background="@drawable/border_main_1"
        android:layout_margin="50dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/todo" />
    <com.tomer.fadingtextview.FadingTextView
        android:id="@+id/fading_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:texts="@array/text"
        app:timeout="500"
        android:textSize="50sp"
        android:typeface="serif"
        android:gravity="center_horizontal"
        android:textStyle="italic"
        android:textColor="#000000"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/shopkeeper2"
        android:padding="5dp"
        android:shadowColor="#000000"
        android:layout_marginTop="30dp"
        android:text="@string/shopkeeper"
        android:typeface="serif"
        android:textAllCaps="false"
        android:textSize="30sp"
        android:background="@drawable/border_main"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:drawableLeft="@drawable/sk_icon"
        android:drawableStart="@drawable/sk_icon"
        android:drawableEnd="@drawable/arrow_icon"
        android:drawableRight="@drawable/arrow_icon"/>
    <Button
        android:layout_width="match_parent"
        android:id="@+id/buyer"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:padding="5dp"
        android:typeface="serif"
        android:text="@string/buyer"
        android:textAllCaps="false"
        android:textSize="30sp"
        android:background="@drawable/border_main"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:drawableLeft="@drawable/byr_icon"
        android:drawableStart="@drawable/byr_icon"
        android:drawableEnd="@drawable/arrow_icon"
        android:drawableRight="@drawable/arrow_icon"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:src="@drawable/shoppers"
        android:contentDescription="@string/todo" />


</LinearLayout>